# ssh-tls-fingerprint-visualizer

./: .dockerignore  .gitignore  BETA_FEATURES.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTION  DOCKER_GUIDE.md  Dockerfile  EVALUATION.md  FINAL_STATUS.md  Makefile  Makefile.mk  PCAP_ANALYSIS.md  PROJECT_BOARD.md  PROJECT_ITINERARY.md  QUICK_START.md  README.md  REPRODUCIBLE_SETUP.md  RUN_INSTRUCTIONS.md  SIMILAR_PROJECTS_REFERENCE.md  SUBMISSION_CHECKLIST.md  SUBMISSION_STATUS.md  WEEK16_COMPLETION_SUMMARY.md  WINDOWS_DOCKER.md  docker-compose.yml  requirements.txt  setup_build.ps1
.github/workflows/: ci.yml
artifacts/: baseline.json  eval_metadata.json  ssh_fingerprints.csv  ssh_fingerprints.json  summary.json  timeline.json  tls_fingerprints.csv  tls_fingerprints.json
artifacts/frozen_v1.0.0/: fingerprints.csv
artifacts/release/: README.md  VERIFICATION.md  fingerprints.csv
data/: demo_hosts.txt
docs/: ARCHITECTURE.md  RUNBOOK.md  SECURITY.md  STATUS.md  SUMMARY.md
include/: alert_manager.h  fingerprint_common.h  ja3.h  pcap_reader.h  utils.h
release/: plot_artifacts.py
release/artifacts/: SHA256SUMS.txt  eval_metadata.json
release/artifacts/csv/: ssh_fingerprints.csv
release/artifacts/logs/: .gitkeep
release/artifacts/pcaps/: .gitkeep  README.txt
release/tools/: pcap_metrics.py
scripts/: demo.sh  freeze_artifacts.sh
src/: alert_manager.cpp  baseline_diff.cpp  collectors.py  fingerprint_common.cpp  fingerprint_pcap.cpp  fingerprint_ssh.cpp  fingerprint_tls.cpp  generate_eval_set.cpp  ja3.cpp  main.py  pcap_reader.cpp  utils.cpp  utils.py  visualize.cpp  visualizer.py
tests/: test_collectors.py  test_integration.cpp  test_utils.cpp
